--- a/Client/src/components/Chat/Chat.css
+++ b/Client/src/components/Chat/Chat.css
@@ -3,15 +3,22 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #1A1A1D;
+    background-image: url('../../Images/chatBackGround.png');
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   
   .container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background: #FFFFFF;
-    border-radius: 8px;
+    background: rgba( 255, 255, 255, 0.2 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 3px );
+    -webkit-backdrop-filter: blur( 3px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border-radius: 20px;
     height: 60%;
     width: 35%;
   }
