--- a/Client/src/components/Input/Input.css
+++ b/Client/src/components/Input/Input.css
@@ -6,9 +6,9 @@
   .input {
     border: none;
     border-radius: 0;
-    padding: 5%;
+    padding: 2%;
     width: 80%;
-    font-size: 1.2em;
+    font-size: 1em;
   }
   
   input:focus, textarea:focus, select:focus{
@@ -19,9 +19,10 @@
     color: #fff !important;
     text-transform: uppercase;
     text-decoration: none;
-    background: #2979FF;
+    background: #581b98;
     padding: 20px;
     display: inline-block;
     border: none;
     width: 20%;
+    cursor: pointer;
   }
