--- a/Client/src/components/Join/Join.css
+++ b/Client/src/components/Join/Join.css
@@ -1,8 +1,12 @@
-html, body {
-    font-family: 'Roboto', sans-serif;
-    padding: 0;
-    margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
+
+  *{
+    font-family: 'Prompt', sans-serif;
   }
+  html, body {
+      padding: 0;
+      margin: 0;
+    }
   
   #root {
     height: 100vh;
@@ -18,15 +22,25 @@ html, body {
     text-align: center;
     height: 100vh;
     align-items: center;
-    background-color: #1A1A1D;
+    background-image: url('../../Images/joinBackGround.jpg');
+    background-size:contain;
   }
   
   .joinInnerContainer {
-    width: 20%;
+    width: 25%;
+    border-radius: 30px;
+    background: rgba( 255, 255, 255, 0.2 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 3px );
+    -webkit-backdrop-filter: blur( 3px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    padding:2rem
   }
   
   .joinInput {
-    border-radius: 0;
+    border:none;
+    border-radius: 10px;
     padding: 15px 20px;
     width: 100%;
   }
@@ -42,14 +56,20 @@ html, body {
       color: #fff !important;
       text-transform: uppercase;
       text-decoration: none;
-      background: #2979FF;
+      background: rgb(21,232,38);
+      background: linear-gradient(273deg, rgba(21,232,38,1) 0%, rgba(42,85,212,1) 97%);
       padding: 20px;
-      border-radius: 5px;
+      border-radius: 15px;
       display: inline-block;
       border: none;
       width: 100%;
+      cursor: pointer;
+      transition: .6s all;
   }
   
+  .button:hover {
+      font-size: 1.2rem;
+  }
   .mt-20 {
     margin-top: 20px;
   }
