--- a/Client/src/components/Chat/Chat.css
+++ b/Client/src/components/Chat/Chat.css
@@ -1,6 +1,6 @@
 .outerContainer {
     display: flex;
-    justify-content: center;
+    justify-content:center;
     align-items: center;
     height: 100vh;
     background-image: url('../../Images/chatBackGround.png');
@@ -16,11 +16,10 @@
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 3px );
     -webkit-backdrop-filter: blur( 3px );
-    border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
-    border-radius: 20px;
     height: 60%;
     width: 35%;
+    padding: .8rem;
   }
   
   @media (min-width: 320px) and (max-width: 480px) {
