--- a/Client/src/components/Input/Input.css
+++ b/Client/src/components/Input/Input.css
@@ -4,8 +4,8 @@
   }
   
   .input {
-    border: none;
-    border-radius: 0;
+    border-top-left-radius: 10px ;
+    border-bottom-left-radius: 10px;
     padding: 2%;
     width: 80%;
     font-size: 1em;
@@ -25,4 +25,6 @@
     border: none;
     width: 20%;
     cursor: pointer;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
   }
