--- a/Client/src/components/TextContainer/TextContainer.css
+++ b/Client/src/components/TextContainer/TextContainer.css
@@ -4,7 +4,15 @@
     margin-left: 100px;
     color: white;
     height: 60%;
+    width: 20%;
     justify-content: space-between;
+    margin: 0;
+    padding: .8rem;
+    background: rgba( 255, 255, 255, 0.3 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 3px );
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
   }
   
   .activeContainer {
@@ -30,4 +38,13 @@
     .textContainer {
       display: none;
     }
+  }
+
+  .headerContainer{
+    background: #9c1de7;
+    height: 60px;
+    border-radius: 10px;
+  }
+  .userContainer {
+    margin: 0%;
   }
